# src/main/java/com/lippio/shortest_path/mapper/controllers_dto/CountryRoutingMapper.java
@@ -1,7 +1,9 @@
 package com.lippio.shortest_path.mapper.controllers_dto;
 
+import com.example.api.generated.model.CountryDetailsDTO;
 import com.example.api.generated.model.CountryIdentifierTypeDTO;
 import com.lippio.shortest_path.enums.CountryIdentifier;
+import com.lippio.shortest_path.pojo.Country;
 import org.mapstruct.Mapper;
 import org.mapstruct.factory.Mappers;
 
@@ -10,5 +12,6 @@ public interface CountryRoutingMapper {
     CountryRoutingMapper INSTANCE = Mappers.getMapper(CountryRoutingMapper.class);
 
     CountryIdentifier toCountryIdentifierType(CountryIdentifierTypeDTO candidateStatusInfo);
+    CountryDetailsDTO toCountryDetailsDTO(Country country);
 
 }
