# src/main/resources/static/openapi.yaml
@@ -8,7 +8,7 @@ info:
     
 
 paths:
-  /country-routing/{from}/{to}:
+  /country/routing/{from}/{to}:
     get:
       summary: 'Calculate path for selected countries'
       operationId: 'CountryRouting'
@@ -53,6 +53,37 @@ paths:
 #        '404':
 #          $ref: '#/components/responses/404'
 
+  /country/{countryCode}:
+    get:
+      summary: 'Calculate path for selected countries'
+      operationId: 'CountryDetails'
+      description: >
+        ## TODO
+      parameters:
+        - in: header
+          name: headers
+          schema:
+            $ref: '#/components/schemas/Headers'
+          required: true
+        - in: path
+          name: countryCode
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: countryIdentifierType
+          description: Interpretation method for from/to parameters
+          required: false
+          schema:
+            $ref: '#/components/schemas/CountryIdentifierTypeDTO'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CountryDetailsDTO'
+
 components:
   schemas:
     Headers:
@@ -68,3 +99,23 @@ components:
         - ISO_CODE
         - CCA_3
         - NAME
+
+    CountryDetailsDTO:
+      type: object
+      properties:
+        name:
+          type: string
+          maxLength: 128
+        region:
+          type: string
+          maxLength: 128
+        isoCode:
+          type: string
+          maxLength: 128
+        countryCode:
+          type: string
+          maxLength: 128
+        coordinates:
+          type: array
+          items:
+            type: float
